language/move-lang/tests/move_check/typing/binary_shl_invalid.exp
error[E04003]: built-in operation not supported
  ┌─ tests/move_check/typing/binary_shl_invalid.move:8:9
  │
8 │         false << true;
  │         ^^^^^
  │         │
  │         Invalid argument to '<<'
  │         Found: 'bool'. But expected: 'u8', 'u64', 'u128'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/binary_shl_invalid.move:8:18
  │
8 │         false << true;
  │                  ^^^^
  │                  │
  │                  Invalid argument to '<<'
  │                  Expected: 'u8'
  │                  Given: 'bool'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/binary_shl_invalid.move:9:14
  │
9 │         1 << false;
  │              ^^^^^
  │              │
  │              Invalid argument to '<<'
  │              Expected: 'u8'
  │              Given: 'bool'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:10:9
   │
10 │         false << 1;
   │         ^^^^^
   │         │
   │         Invalid argument to '<<'
   │         Found: 'bool'. But expected: 'u8', 'u64', 'u128'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:11:9
   │
11 │         @0x0 << @0x1;
   │         ^^^^
   │         │
   │         Invalid argument to '<<'
   │         Found: 'address'. But expected: 'u8', 'u64', 'u128'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:11:17
   │
11 │         @0x0 << @0x1;
   │                 ^^^^
   │                 │
   │                 Invalid argument to '<<'
   │                 Expected: 'u8'
   │                 Given: 'address'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:12:20
   │
12 │         (0: u8) << (1: u128);
   │                    ^^^^^^^^^
   │                    │   │
   │                    │   Given: 'u128'
   │                    Invalid argument to '<<'
   │                    Expected: 'u8'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:13:9
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - Found: '0x8675309::M::R'. But expected: 'u8', 'u64', 'u128'
   ·
13 │         r << r;
   │         ^ Invalid argument to '<<'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/binary_shl_invalid.move:13:9
   │
 3 │     struct R {
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - The type '0x8675309::M::R' does not have the ability 'drop'
   ·
13 │         r << r;
   │         ^^^^^^ Cannot ignore values without the 'drop' ability. The value must be used

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:13:14
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                       - Given: '0x8675309::M::R'
   ·
13 │         r << r;
   │              ^
   │              │
   │              Invalid argument to '<<'
   │              Expected: 'u8'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:14:9
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                             - Found: '0x8675309::M::S'. But expected: 'u8', 'u64', 'u128'
   ·
14 │         s << s;
   │         ^ Invalid argument to '<<'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:14:14
   │
 7 │     fun t0(x: u64, r: R, s: S) {
   │                             - Given: '0x8675309::M::S'
   ·
14 │         s << s;
   │              ^
   │              │
   │              Invalid argument to '<<'
   │              Expected: 'u8'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:15:14
   │
15 │         1 << false << @0x0 << 0;
   │              ^^^^^
   │              │
   │              Invalid argument to '<<'
   │              Expected: 'u8'
   │              Given: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:15:23
   │
15 │         1 << false << @0x0 << 0;
   │                       ^^^^
   │                       │
   │                       Invalid argument to '<<'
   │                       Expected: 'u8'
   │                       Given: 'address'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:16:9
   │
16 │         () << ();
   │         ^^
   │         │
   │         Invalid argument to '<<'
   │         Found: '()'. But expected: 'u8', 'u64', 'u128'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:16:15
   │
16 │         () << ();
   │               ^^
   │               │
   │               Invalid argument to '<<'
   │               Expected: 'u8'
   │               Given: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:17:14
   │
17 │         1 << ();
   │              ^^
   │              │
   │              Invalid argument to '<<'
   │              Expected: 'u8'
   │              Given: '()'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:18:9
   │
18 │         (0, 1) << (0, 1, 2);
   │         ^^^^^^
   │         │
   │         Invalid argument to '<<'
   │         Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:18:19
   │
18 │         (0, 1) << (0, 1, 2);
   │                   ^^^^^^^^^
   │                   │
   │                   Invalid argument to '<<'
   │                   Expected: 'u8'
   │                   Given: '({integer}, {integer}, {integer})'

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/typing/binary_shl_invalid.move:19:9
   │
19 │         (1, 2) << (0, 1);
   │         ^^^^^^
   │         │
   │         Invalid argument to '<<'
   │         Found: '(u64, u64)'. But expected: 'u8', 'u64', 'u128'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/binary_shl_invalid.move:19:19
   │
19 │         (1, 2) << (0, 1);
   │                   ^^^^^^
   │                   │
   │                   Invalid argument to '<<'
   │                   Expected: 'u8'
   │                   Given: '({integer}, {integer})'

